--- a/index.html
+++ b/index.html
@@ -1,13 +1,98 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!doctype html>
+<html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Minecraft — Міні-сайт</title>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello world</h1>
-    <script src="script.js"></script>
+  <header class="hero">
+    <div class="container">
+      <h1 class="title">MINECRAFT — СВІТ БЛОКІВ</h1>
+      <p class="lead">Міні-сайт про гру Minecraft: що це, історія створення, хто її створив і відомі гравці. Колірна гамма і стиль натхненні блоками гри.</p>
+      <nav class="nav">
+        <button class="btn" data-scroll="about">Про гру</button>
+        <button class="btn secondary" data-scroll="history">Історія</button>
+        <button class="btn" data-scroll="creator">Творець</button>
+        <button class="btn secondary" data-scroll="players">Гравці</button>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section id="about" class="card">
+      <h2>Про гру</h2>
+      <p>Minecraft — це пісочниця з відкритим світом, де основою є кубічні блоки. Гравці добувають ресурси, будують будівлі, досліджують печери і борються з істотами. Гра підходить для творчості, навчання та пригод.</p>
+      <p>Режими: Виживання (Survival), Творчий (Creative), Афтердев (Adventure), Мультиплеєр.</p>
+    </section>
+
+    <section id="history" class="card">
+      <h2>Історія</h2>
+      <p>Гра з'явилася як інді-проєкт у кінці 2009 року. Спочатку вона була простою бета-версією, але швидко набула популярності. Згодом з'явилися офіційні релізи, мультиплеєрні сервери і моди, що зробили Minecraft культурним феноменом.</p>
+    </section>
+
+    <section id="creator" class="card">
+      <h2>Хто створив Minecraft</h2>
+      <p>Творець гри — Маркус Перссон (нікнейм Notch). Він почав розробку гри у 2009 році, а пізніше заснував студію Mojang, яка продовжила розвивати проєкт.</p>
+    </section>
+
+    <section id="players" class="card">
+      <h2>Легендарні гравці та спільнота</h2>
+      <div class="grid">
+        <div class="player">
+          <div class="avatar"><div class="face"></div></div>
+          <h3>Dream</h3>
+          <p>Відомий ютубер і стрімер, популяризував швидкі забіги і майстер-класи.</p>
+          <p><button class="btn" data-player="dream">Детальніше</button></p>
+        </div>
+
+        <div class="player">
+          <div class="avatar"><div class="face"></div></div>
+          <h3>Technoblade</h3>
+          <p>Легендарний PvP-гравець (пам'ять про нього жива в спільноті).</p>
+          <p><button class="btn" data-player="technoblade">Детальніше</button></p>
+        </div>
+
+        <div class="player">
+          <div class="avatar"><div class="face"></div></div>
+          <h3>CaptainSparklez</h3>
+          <p>Відомий музичними пародіями і пригодницькими картами.</p>
+          <p><button class="btn" data-player="cap">Детальніше</button></p>
+        </div>
+
+        <div class="player">
+          <div class="player" style="padding:8px;border:4px solid #d0b58a;background:#fff">
+            <div class="avatar"><div class="face"></div></div>
+            <h3>HermitCraft</h3>
+            <p>Група будівельників і креаторів, відома своїми великими проєктами.</p>
+            <p><button class="btn secondary" data-player="hermit">Детальніше</button></p>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="card">
+      <h2>Колірна гамма і стиль</h2>
+      <p>Сайт оформлено у стилі Minecraft: зелений (трава), коричневий (ґрунт), блакитний (небо) та кам'яні відтінки. Використано блокові мотиви і піксельний шрифт для атмосфери гри.</p>
+    </section>
+
+  </main>
+
+  <footer>
+    <div class="container">Цей Міні-сайт.</div>
+  </footer>
+
+  <!-- modal -->
+  <div id="modal" class="modal">
+    <div class="box">
+      <button class="close" id="closeBtn">Закрити</button>
+      <div id="modalContent"></div>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
