--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1>minecraft it`s my life</h1>
+    <h1>minecraft it`s my life</h1>
     <script src="script.js"></script>
 </body>
 </html>
