--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="uk">
 <head>
@@ -40,40 +39,38 @@
     </section>
 
     <section id="players" class="card">
-      <h2>Легендарні гравці та спільнота</h2>
-      <div class="grid">
-        <div class="player">
-          <div class="avatar"><div class="face"></div></div>
-          <h3>Dream</h3>
-          <p>Відомий ютубер і стрімер, популяризував швидкі забіги і майстер-класи.</p>
-          <p><button class="btn" data-player="dream">Детальніше</button></p>
-        </div>
+  <h2>Легендарні гравці та спільнота</h2>
+  <div class="grid">
+    <div class="player">
+      <img src="img/dream.jpg" alt="Dream" class="avatar">
+      <h3>Dream</h3>
+      <p>Відомий ютубер і стрімер, популяризував швидкі забіги і майстер-класи.</p>
+      <p><button class="btn" data-player="dream">Детальніше</button></p>
+    </div>
 
-        <div class="player">
-          <div class="avatar"><div class="face"></div></div>
-          <h3>Technoblade</h3>
-          <p>Легендарний PvP-гравець (пам'ять про нього жива в спільноті).</p>
-          <p><button class="btn" data-player="technoblade">Детальніше</button></p>
-        </div>
+    <div class="player">
+      <img src="img/technoblade.jpg" alt="Technoblade" class="avatar">
+      <h3>Technoblade</h3>
+      <p>Легендарний PvP-гравець (пам'ять про нього жива в спільноті).</p>
+      <p><button class="btn" data-player="technoblade">Детальніше</button></p>
+    </div>
 
-        <div class="player">
-          <div class="avatar"><div class="face"></div></div>
-          <h3>CaptainSparklez</h3>
-          <p>Відомий музичними пародіями і пригодницькими картами.</p>
-          <p><button class="btn" data-player="cap">Детальніше</button></p>
-        </div>
+    <div class="player">
+      <img src="img/captainsparklez.jpg" alt="CaptainSparklez" class="avatar">
+      <h3>CaptainSparklez</h3>
+      <p>Відомий музичними пародіями і пригодницькими картами.</p>
+      <p><button class="btn" data-player="cap">Детальніше</button></p>
+    </div>
 
-        <div class="player">
-          <div class="player" style="padding:8px;border:4px solid #d0b58a;background:#fff">
-            <div class="avatar"><div class="face"></div></div>
-            <h3>HermitCraft</h3>
-            <p>Група будівельників і креаторів, відома своїми великими проєктами.</p>
-            <p><button class="btn secondary" data-player="hermit">Детальніше</button></p>
-          </div>
-        </div>
+    <div class="player">
+      <img src="img/hermit.jpg" alt="HermitCraft" class="avatar">
+      <h3>HermitCraft</h3>
+      <p>Група будівельників і креаторів, відома своїми великими проєктами.</p>
+      <p><button class="btn" data-player="hermit">Детальніше</button></p>
+    </div>
+  </div>
+</section>
 
-      </div>
-    </section>
 
     <section class="card">
       <h2>Колірна гамма і стиль</h2>
@@ -83,10 +80,14 @@
   </main>
 
   <footer>
-    <div class="container">Цей Міні-сайт.</div>
-  </footer>
-
-  <!-- modal -->
+    <div class="container adventure-style">
+        <p>Ласкаво просимо! Цей міні-світ побудовано з міцного Обсидіану.</p>
+        <p class="final-note">Успішних пригод! Не забувай про Голод та Здоров'я.</p>
+        
+        <p class="copyright-simple"><small>&copy; 2025. Створено з любов'ю до кубічних світів.</small></p>
+    </div>
+</footer>
+<!-- modal -->
   <div id="modal" class="modal">
     <div class="box">
       <button class="close" id="closeBtn">Закрити</button>
