--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="uk">
 <head>
@@ -9,11 +8,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<<<<<<< HEAD
-    <h1>minecraft it`s my life</h1>
-    <h1>minecraft it`s my life</h1>
-    <script src="script.js"></script>
-=======
   <header class="hero">
     <div class="container">
       <h1 class="title">MINECRAFT — СВІТ БЛОКІВ</h1>
@@ -88,8 +82,14 @@
   </main>
 
   <footer>
-    <div class="container">Цей Міні-сайт.</div>
-  </footer>
+    <div class="container adventure-style">
+        <p>**Ласкаво просимо!** Цей міні-світ побудовано з міцного **Обсидіану**.</p>
+        <p class="final-note">**Успішних пригод!** Не забувай про **Голод** та **Здоров'я**.</p>
+        
+        <p class="copyright-simple"><small>&copy; 2025. Створено з любов'ю до кубічних світів.</small></p>
+    </div>
+</footer>
+
 
   <!-- modal -->
   <div id="modal" class="modal">
@@ -99,6 +99,5 @@
     </div>
   </div>
   <script src="script.js"></script>
->>>>>>> bc6a57213674f157be7753b0a2c9aaa4540b17f8
 </body>
 </html>
