--- a/index.html
+++ b/index.html
@@ -25,86 +25,59 @@
     <section id="about" class="card">
       <h2>Про гру</h2>
       <p>Minecraft — це пісочниця з відкритим світом, де основою є кубічні блоки. Гравці добувають ресурси, будують будівлі, досліджують печери і борються з істотами. Гра підходить для творчості, навчання та пригод.</p>
-      <p>Режими: Виживання (Survival), Творчий (Creative), Афтердев (Adventure), Мультиплеєр.</p>
+      <p>Режими: Виживання (Survival), Творчий (Creative), Пригодницький (Adventure), Мультиплеєр.</p>
     </section>
 
     <section id="history" class="card">
       <h2>Історія</h2>
-      <p>Гра з'явилася як інді-проєкт у кінці 2009 року. Спочатку вона була простою бета-версією, але швидко набула популярності. Згодом з'явилися офіційні релізи, мультиплеєрні сервери і моди, що зробили Minecraft культурним феноменом.</p>
+      <p>Гра з'явилася як інді-проєкт у 2009 році. Спочатку вона була простою бета-версією, але швидко набула популярності. Згодом з'явилися офіційні релізи, сервери та моди, що зробили Minecraft культурним феноменом.</p>
     </section>
 
     <section id="creator" class="card">
       <h2>Хто створив Minecraft</h2>
-      <p>Творець гри — Маркус Перссон (нікнейм Notch). Він почав розробку гри у 2009 році, а пізніше заснував студію Mojang, яка продовжила розвивати проєкт.</p>
+      <p>Творець гри — Маркус Перссон (Notch). Він почав розробку гри у 2009 році та заснував студію Mojang, яка продовжила розвиток проєкту.</p>
     </section>
 
     <section id="players" class="card">
-  <h2>Легендарні гравці та спільнота</h2>
-  <div class="grid">
-    <div class="player">
-      <img src="img/dream.jpg" alt="Dream" class="avatar">
-      <h3>Dream</h3>
-      <p>Відомий ютубер і стрімер, популяризував швидкі забіги і майстер-класи.</p>
-      <p><button class="btn" data-player="dream">Детальніше</button></p>
-    </div>
+      <h2>Легендарні гравці</h2>
+      <div class="grid">
+        <div class="player">
+          <img src="img/dream.jpg" alt="Dream" class="avatar" onerror="this.src='https://i.imgur.com/koO1f7r.png'">
+          <h3>Dream</h3>
+          <p>Відомий ютубер і стрімер, популяризував швидкі забіги (speedruns).</p>
+        </div>
 
-    <div class="player">
-      <img src="img/technoblade.jpg" alt="Technoblade" class="avatar">
-      <h3>Technoblade</h3>
-      <p>Легендарний PvP-гравець (пам'ять про нього жива в спільноті).</p>
-      <p><button class="btn" data-player="technoblade">Детальніше</button></p>
-    </div>
+        <div class="player">
+          <img src="img/technoblade.jpg" alt="Technoblade" class="avatar" onerror="this.src='https://i.imgur.com/koO1f7r.png'">
+          <h3>Technoblade</h3>
+          <p>Легендарний PvP-гравець, чия спадщина живе в спільноті.</p>
+        </div>
 
-    <div class="player">
-      <img src="img/captainsparklez.jpg" alt="CaptainSparklez" class="avatar">
-      <h3>CaptainSparklez</h3>
-      <p>Відомий музичними пародіями і пригодницькими картами.</p>
-      <p><button class="btn" data-player="cap">Детальніше</button></p>
-    </div>
+        <div class="player">
+          <img src="img/captainsparklez.jpg" alt="CaptainSparklez" class="avatar" onerror="this.src='https://i.imgur.com/koO1f7r.png'">
+          <h3>CaptainSparklez</h3>
+          <p>Автор музичних пародій і пригодницьких карт.</p>
+        </div>
 
-    <div class="player">
-      <img src="img/hermit.jpg" alt="HermitCraft" class="avatar">
-      <h3>HermitCraft</h3>
-      <p>Група будівельників і креаторів, відома своїми великими проєктами.</p>
-      <p><button class="btn" data-player="hermit">Детальніше</button></p>
-    </div>
-  </div>
-</section>
-
-
-    <section class="card">
-      <h2>Колірна гамма і стиль</h2>
-      <p>Сайт оформлено у стилі Minecraft: зелений (трава), коричневий (ґрунт), блакитний (небо) та кам'яні відтінки. Використано блокові мотиви і піксельний шрифт для атмосфери гри.</p>
+        <div class="player">
+          <img src="img/hermit.jpg" alt="HermitCraft" class="avatar" onerror="this.src='https://i.imgur.com/koO1f7r.png'">
+          <h3>HermitCraft</h3>
+          <p>Спільнота будівельників і творців грандіозних проєктів.</p>
+        </div>
+      </div>
     </section>
 
+    <section class="card">
+      <h2>Стиль і кольори</h2>
+      <p>Сайт оформлений у стилі Minecraft: зелений (трава), коричневий (ґрунт), блакитний (небо) і сірий (камінь). Використано піксельний шрифт і блокові елементи для атмосфери гри.</p>
+    </section>
   </main>
 
   <footer>
-    <div class="container adventure-style">
-<<<<<<< HEAD
-        <p>Ласкаво просимо! Цей міні-світ побудовано з міцного Обсидіану.</p>
-        <p class="final-note">Успішних пригод! Не забувай про Голод та Здоров'я.</p>
-=======
-        <p>**Ласкаво просимо!** Цей міні-світ побудовано з міцного **Обсидіану**.</p>
-        <p class="final-note">**Успішних пригод!** Не забувай про **Голод** та **Здоров'я**.</p>
->>>>>>> b3f48a3268becb6a8c2acfbce5d536a085aa5b28
-        
-        <p class="copyright-simple"><small>&copy; 2025. Створено з любов'ю до кубічних світів.</small></p>
+    <div class="container">
+      <p>Зроблено з любов’ю до кубічних світів 🌍</p>
+      <p><small>&copy; 2025 Minecraft Mini-site</small></p>
     </div>
-</footer>
-<<<<<<< HEAD
-<!-- modal -->
-=======
-
-
-  <!-- modal -->
->>>>>>> b3f48a3268becb6a8c2acfbce5d536a085aa5b28
-  <div id="modal" class="modal">
-    <div class="box">
-      <button class="close" id="closeBtn">Закрити</button>
-      <div id="modalContent"></div>
-    </div>
-  </div>
-  <script src="script.js"></script>
+  </footer>
 </body>
 </html>
