--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="player">
-          <img src="img/hermit.jpg" alt="HermitCraft" class="avatar" onerror="this.src='https://i.imgur.com/koO1f7r.png'">
+          <img src="img/hermitCraft.jpg" alt="HermitCraft" class="avatar" onerror="this.src='https://i.imgur.com/koO1f7r.png'">
           <h3>HermitCraft</h3>
           <p>Спільнота будівельників і творців грандіозних проєктів.</p>
         </div>
