--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="hero">
     <div class="container">
       <h1 class="title">MINECRAFT — СВІТ БЛОКІВ</h1>
-      <p class="lead">Міні-сайт про гру Minecraft: що це, історія створення, хто її створив і відомі гравці. Колірна гамма і стиль натхненні блоками гри.</p>
+      <p class="lead">Міні-сайт про гру Minecraft: що це, історія створення, хто її створив і відомі гравці.</p>
       <nav class="nav">
         <button class="btn" data-scroll="about">Про гру</button>
         <button class="btn secondary" data-scroll="history">Історія</button>
@@ -24,60 +24,74 @@
   <main class="container">
     <section id="about" class="card">
       <h2>Про гру</h2>
-      <p>Minecraft — це пісочниця з відкритим світом, де основою є кубічні блоки. Гравці добувають ресурси, будують будівлі, досліджують печери і борються з істотами. Гра підходить для творчості, навчання та пригод.</p>
-      <p>Режими: Виживання (Survival), Творчий (Creative), Пригодницький (Adventure), Мультиплеєр.</p>
+      <p>Minecraft — це пісочниця з відкритим світом, де все складається з кубічних блоків. Гравці будують, досліджують і виживають у цьому світі.</p>
     </section>
 
     <section id="history" class="card">
       <h2>Історія</h2>
-      <p>Гра з'явилася як інді-проєкт у 2009 році. Спочатку вона була простою бета-версією, але швидко набула популярності. Згодом з'явилися офіційні релізи, сервери та моди, що зробили Minecraft культурним феноменом.</p>
+      <p>Гра створена у 2009 році Маркусом Перссоном як інді-проєкт. Пізніше її придбала компанія Microsoft, і Minecraft став глобальним феноменом.</p>
     </section>
 
     <section id="creator" class="card">
-      <h2>Хто створив Minecraft</h2>
-      <p>Творець гри — Маркус Перссон (Notch). Він почав розробку гри у 2009 році та заснував студію Mojang, яка продовжила розвиток проєкту.</p>
+      <h2>Творець</h2>
+      <p>Маркус "Notch" Перссон — шведський програміст, який створив Minecraft. Після цього він заснував студію Mojang.</p>
     </section>
 
     <section id="players" class="card">
       <h2>Легендарні гравці</h2>
       <div class="grid">
         <div class="player">
-          <img src="img/dream.jpg" alt="Dream" class="avatar" onerror="this.src='https://i.imgur.com/koO1f7r.png'">
+          <img src="img/dream.jpg" alt="Dream" class="avatar">
           <h3>Dream</h3>
-          <p>Відомий ютубер і стрімер, популяризував швидкі забіги (speedruns).</p>
+          <p>Популярний ютубер, який прославився своїми швидкісними забігами.</p>
+          <button class="btn" data-player="dream">Детальніше</button>
         </div>
 
         <div class="player">
-          <img src="img/technoblade.jpg" alt="Technoblade" class="avatar" onerror="this.src='https://i.imgur.com/koO1f7r.png'">
+          <img src="img/technoblade.jpg" alt="Technoblade" class="avatar">
           <h3>Technoblade</h3>
-          <p>Легендарний PvP-гравець, чия спадщина живе в спільноті.</p>
+          <p>Легендарний PvP-гравець, відомий у всьому світі.</p>
+          <button class="btn" data-player="technoblade">Детальніше</button>
         </div>
 
         <div class="player">
-          <img src="img/captainsparklez.jpg" alt="CaptainSparklez" class="avatar" onerror="this.src='https://i.imgur.com/koO1f7r.png'">
-          <h3>CaptainSparklez</h3>
-          <p>Автор музичних пародій і пригодницьких карт.</p>
+          <img src="img/captainsparklez.jpg" alt="CaptainSparklez" class="avatar">
+          <h3>Captain
+            Sparklez</h3>
+          <p>Автор культових Minecraft-пісень і пригодницьких карт.</p>
+          <button class="btn" data-player="cap">Детальніше</button>
         </div>
 
         <div class="player">
-          <img src="img/hermitCraft.jpg" alt="HermitCraft" class="avatar" onerror="this.src='https://i.imgur.com/koO1f7r.png'">
+          <img src="img/hermitCraft.jpg" alt="HermitCraft" class="avatar">
           <h3>HermitCraft</h3>
-          <p>Спільнота будівельників і творців грандіозних проєктів.</p>
+          <p>Велика спільнота будівельників, що створює масштабні світи.</p>
+          <button class="btn" data-player="hermit">Детальніше</button>
         </div>
       </div>
     </section>
 
+    <!-- модальне вікно -->
+    <div id="modal" class="modal">
+      <div class="box">
+        <button id="closeBtn" class="close">Закрити</button>
+        <div id="modalContent"></div>
+      </div>
+    </div>
+
     <section class="card">
-      <h2>Стиль і кольори</h2>
-      <p>Сайт оформлений у стилі Minecraft: зелений (трава), коричневий (ґрунт), блакитний (небо) і сірий (камінь). Використано піксельний шрифт і блокові елементи для атмосфери гри.</p>
+      <h2>Стиль сайту</h2>
+      <p>Дизайн у стилі Minecraft: земля, трава, небо і камінь — усе у блоковому стилі.</p>
     </section>
   </main>
 
   <footer>
     <div class="container">
-      <p>Зроблено з любов’ю до кубічних світів 🌍</p>
+      <p>Зроблено з любов’ю до Minecraft 🌍</p>
       <p><small>&copy; 2025 Minecraft Mini-site</small></p>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
