--- a/index.html
+++ b/index.html
@@ -78,19 +78,60 @@
         <div id="modalContent"></div>
       </div>
     </div>
-
-    <section class="card">
-      <h2>Стиль сайту</h2>
-      <p>Дизайн у стилі Minecraft: земля, трава, небо і камінь — усе у блоковому стилі.</p>
-    </section>
   </main>
 
-  <footer>
-    <div class="container">
-      <p>Зроблено з любов’ю до Minecraft 🌍</p>
-      <p><small>&copy; 2025 Minecraft Mini-site</small></p>
+  <footer class="minecraft-footer">
+  <div class="footer-top">
+    <img src="img/mojang-logo.jpg" alt="Mojang Studios" class="footer-logo" />
+    <img src="img/xbox-logo.jpg" alt="Xbox Game Studios" class="footer-logo" />
+  </div>
+
+  <div class="footer-columns">
+    <div class="footer-col">
+      <h4>Ігри</h4>
+      <ul>
+        <li><a href="#">Minecraft</a></li>
+        <li><a href="#">Minecraft Dungeons</a></li>
+        <li><a href="#">Minecraft Legends</a></li>
+        <li><a href="#">Minecraft Education</a></li>
+      </ul>
     </div>
-  </footer>
+
+    <div class="footer-col">
+      <h4>Магазин</h4>
+      <ul>
+        <li><a href="#">Ринок</a></li>
+        <li><a href="#">Магазин Minecraft</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4>Спільнота</h4>
+      <ul>
+        <li><a href="#">Портал для творців</a></li>
+        <li><a href="#">Кар’єра в Mojang</a></li>
+        <li><a href="#">Minecraft у кіно</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-col">
+      <h4>Підтримка</h4>
+      <ul>
+        <li><a href="#">Поради новачкам</a></li>
+        <li><a href="#">Зв’язатися з нами</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2025 Mojang AB. TM Microsoft Corporation.</p>
+    <p>
+      <a href="#">Правила використання Minecraft</a> |
+      <a href="#">Керувати згодою</a>
+    </p>
+  </div>
+</footer>
+
 
   <script src="script.js"></script>
 </body>
