--- a/index.html
+++ b/index.html
@@ -9,26 +9,29 @@
 </head>
 <body>
 
-  <!-- ------------------ NAVBAR ------------------ -->
+  <!-- NAVBAR -->
   <nav class="navbar"> 
-    <div class="container nav-container">
-      <a href="#" class="logo">MINECRAFT</a>
-      <ul class="nav-links">
-        <li><a href="#about">Про гру</a></li>
-        <li><a href="#history">Історія</a></li>
-        <li><a href="#creator">Творець</a></li>
-        <li><a href="#players">Гравці</a></li>
-      </ul>
-      <a href="https://www.minecraft.net/uk-ua/get-minecraft" target="_blank" class="btn nav-btn">Скачати</a>
-    </div>
-  </nav>
+  <div class="container nav-container">
+    <a href="index.html" class="logo">
+      <img src="img/logo.png" alt="Minecraft Logo">
+    </a>
+    <ul class="nav-links">
+      <li><a href="#about">Про гру</a></li>
+      <li><a href="#history">Історія</a></li>
+      <li><a href="#creator">Творець</a></li>
+      <li><a href="#players">Гравці</a></li>
+    </ul>
+    <a href="https://www.minecraft.net/uk-ua/get-minecraft" target="_blank" class="btn nav-btn">Скачати</a>
+  </div>
+</nav>
 
-  <!-- ------------------ HERO ------------------ -->
+
+  <!--HERO -->
   <header class="hero">
-    <!-- Теперь hero пустой, только фон -->
+    <!--hero пустой, только фон -->
   </header>
 
-  <!-- ------------------ MAIN ------------------ -->
+  <!--MAIN -->
   <main class="container">
     <section id="about" class="card">
       <h2>Про гру</h2>
@@ -85,7 +88,7 @@
   <a href="test.html" class="btn">🧠 Пройти тест</a>
 </div>
 
-    <!-- модальне вікно -->
+    
     <div id="modal" class="modal">
       <div class="box">
         <button id="closeBtn" class="close">Закрити</button>
@@ -94,58 +97,93 @@
     </div>
   </main>
 
-  <!-- ------------------ FOOTER ------------------ -->
-  <footer class="minecraft-footer">
-    <div class="footer-top">
-      <img src="img/mojang-logo.jpg" alt="Mojang Studios" class="footer-logo" />
-      <img src="img/xbox-logo.jpg" alt="Xbox Game Studios" class="footer-logo" />
+  <section class="social-bar">
+  <div class="container">
+    <div class="social-text">підписатися на Minecraft</div>
+    <div class="social-icons">
+      <a href="https://www.instagram.com/minecraft/" target="_blank" aria-label="Instagram" class="social-icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png" alt="Instagram">
+      </a>
+      <a href="https://www.youtube.com/minecraft" target="_blank" aria-label="YouTube" class="social-icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube">
+      </a>
+      <a href="https://x.com/Minecraft" target="_blank" aria-label="X" class="social-icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="X">
+      </a>
+      <a href="https://www.facebook.com/minecraft/" target="_blank" aria-label="Facebook" class="social-icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
+      </a>
+      <a href="https://www.tiktok.com/@minecraft" target="_blank" aria-label="TikTok" class="social-icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/3046/3046128.png" alt="TikTok">
+      </a>
+      <a href="https://open.spotify.com/artist/7i68fmsIERvgavI8Q1H09h?si=W8eaFDQWRbKHzSIaa4FSyQ&nd=1&dlsi=ccac09f3f4914675" target="_blank" aria-label="Spotify" class="social-icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111624.png" alt="Spotify">
+      </a>
+      <a href="https://discord.com/invite/minecraft" target="_blank" aria-label="Discord" class="social-icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord">
+      </a>
+      <a href="https://www.whatsapp.com/channel/0029VakYS0uKLaHg2yxV2T1p" target="_blank" aria-label="WhatsApp" class="social-icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+      </a>
+    </div>
+  </div>
+</section>
+
+  <!-- FOOTER -->
+<footer class="minecraft-footer">
+  <div class="footer-top">
+    <img src="img/mojang-logo.jpg" alt="Mojang Studios" class="footer-logo" />
+    <img src="img/xbox_logo.webp" alt="Xbox Game Studios" class="footer-logo" />
+  </div>
+
+  
+
+  <div class="footer-columns">
+    <div class="footer-col">
+      <h4>Ігри</h4>
+      <ul>
+        <li><a href="https://www.minecraft.net/" target="_blank">Minecraft</a></li>
+        <li><a href="https://www.minecraft.net/en-us/about-dungeons" target="_blank">Minecraft Dungeons</a></li>
+        <li><a href="https://www.minecraft.net/en-us/about-legends" target="_blank">Minecraft Legends</a></li>
+        <li><a href="https://education.minecraft.net/" target="_blank">Minecraft Education</a></li>
+      </ul>
     </div>
 
-    <div class="footer-columns">
-      <div class="footer-col">
-        <h4>Ігри</h4>
-        <ul>
-          <li><a href="#">Minecraft</a></li>
-          <li><a href="#">Minecraft Dungeons</a></li>
-          <li><a href="#">Minecraft Legends</a></li>
-          <li><a href="#">Minecraft Education</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col">
-        <h4>Магазин</h4>
-        <ul>
-          <li><a href="#">Ринок</a></li>
-          <li><a href="#">Магазин Minecraft</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col">
-        <h4>Спільнота</h4>
-        <ul>
-          <li><a href="#">Портал для творців</a></li>
-          <li><a href="#">Кар’єра в Mojang</a></li>
-          <li><a href="#">Minecraft у кіно</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col">
-        <h4>Підтримка</h4>
-        <ul>
-          <li><a href="#">Поради новачкам</a></li>
-          <li><a href="#">Зв’язатися з нами</a></li>
-        </ul>
-      </div>
+    <div class="footer-col">
+      <h4>Магазин</h4>
+      <ul>
+        <li><a href="https://www.minecraft.net/en-us/store/minecraft" target="_blank">Ринок</a></li>
+        <li><a href="https://www.minecraft.net/en-us/store/minecraft" target="_blank">Магазин Minecraft</a></li>
+      </ul>
     </div>
 
-    <div class="footer-bottom">
-      <p>© 2025 Mojang AB. TM Microsoft Corporation.</p>
-      <p>
-        <a href="#">Правила використання Minecraft</a> |
-        <a href="#">Керувати згодою</a>
-      </p>
+    <div class="footer-col">
+      <h4>Спільнота</h4>
+      <ul>
+        <li><a href="https://www.minecraft.net/ru-ru/creator" target="_blank">Портал для творців</a></li>
+        <li><a href="https://www.minecraft.net/ru-ru/mojang-careers" target="_blank">Кар’єра в Mojang</a></li>
+        <li><a href="https://www.minecraft.net/ru-ru/minecraft-movie" target="_blank">Minecraft у кіно</a></li>
+      </ul>
     </div>
-  </footer>
+
+    <div class="footer-col">
+      <h4>Підтримка</h4>
+      <ul>
+        <li><a href="https://www.minecraft.net/en-us/help" target="_blank">Поради новачкам</a></li>
+        <li><a href="https://help.minecraft.net/hc/en-us/articles/4408904068621-Feedback-and-Fan-Mail" target="_blank">Зв’язатися з нами</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2025 Mojang AB. TM Microsoft Corporation.</p>
+    <p>
+      <a href="https://www.minecraft.net/en-us/terms" target="_blank">Правила використання Minecraft</a> |
+      <a href="https://www.minecraft.net/en-us/privacy" target="_blank">Керувати згодою</a>
+    </p>
+  </div>
+</footer>
+
 
   <script src="script.js"></script>
 </body>
