--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <ul class="nav-links">
         <li><a href="index.html">Головна</a></li>
         <li><a href="instructions.html">Інструкція</a></li>
+        <li><a href="quiz.html">Квіз</a></li>
       <li><a href="#about">Про гру</a></li>
       <li><a href="#history">Історія</a></li>
       <li><a href="#creator">Творець</a></li>
