--- a/index.html
+++ b/index.html
@@ -16,14 +16,19 @@
       <img src="img/logo.png" alt="Minecraft Logo">
     </a>
     <ul class="nav-links">
-        <li><a href="index.html">Головна</a></li>
-        <li><a href="instructions.html">Інструкція</a></li>
-        <li><a href="quiz.html">Квіз</a></li>
-      <li><a href="#about">Про гру</a></li>
-      <li><a href="#history">Історія</a></li>
-      <li><a href="#creator">Творець</a></li>
-      <li><a href="#players">Гравці</a></li>
-    </ul>
+  <li class="dropdown">
+    <a href="#" class="dropbtn">Головна</a>
+    <div class="dropdown-content">
+      <a href="#about">Про гру</a>
+      <a href="#history">Історія</a>
+      <a href="#creator">Творець</a>
+      <a href="#players">Гравці</a>
+    </div>
+  </li>
+  <li><a href="instructions.html">Інструкція</a></li>
+  <li><a href="quiz.html">Квіз</a></li>
+</ul>
+
     <a href="https://www.minecraft.net/uk-ua/get-minecraft" target="_blank" class="btn nav-btn">Скачати</a>
   </div>
 </nav>
