--- a/quiz.html
+++ b/quiz.html
@@ -16,16 +16,11 @@
   <nav class="navbar"> 
   <div class="container nav-container">
     <a href="index.html" class="logo">
+      <img src="img/logo.png" alt="Minecraft Logo">
     
     </a>
     <ul class="nav-links">
-        <li><a href="index.html">Головна</a></li>
-        <li><a href="instructions.html">Інструкція</a></li>
-        <li><a href="quiz.html">Квіз</a></li>
-      <li><a href="#about">Про гру</a></li>
-      <li><a href="#history">Історія</a></li>
-      <li><a href="#creator">Творець</a></li>
-      <li><a href="#players">Гравці</a></li>
+        <li><a href="index.html">Назад на головну</a></li>
     </ul>
     <a href="https://www.minecraft.net/uk-ua/get-minecraft" target="_blank" class="btn nav-btn">Скачати</a>
   </div>
