--- a/index.html
+++ b/index.html
@@ -190,5 +190,7 @@
 
   <script src="script.js"></script>
   <script src="quiz.html"></script>
+  <script src="quiz.css"></script>
+  <script src="quiz.js"></script>
 </body>
 </html>
