--- a/instructions.html
+++ b/instructions.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -7,17 +8,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <!-- NAVBAR -->
-  <nav class="navbar"> 
-    <div class="container nav-container">
+  <nav class="navbar">
+    <div class="nav-container">
       <a href="index.html" class="logo">
         <img src="img/logo.png" alt="Minecraft Logo">
       </a>
       <ul class="nav-links">
         <li><a href="index.html">Головна</a></li>
         <li><a href="instructions.html">Інструкція</a></li>
+        <li><a href="quiz.html">Квіз</a></li>
+        <li><a href="poradu.html">Поради</a></li>
         <li><a href="#start">Початок гри</a></li>
         <li><a href="#build">Будівництво</a></li>
         <li><a href="#survive">Виживання</a></li>
@@ -36,17 +40,20 @@
 
     <section id="start" class="card">
       <h2>1️⃣ Початок гри</h2>
-      <p>Після створення світу вибери режим — виживання або креатив. У виживанні збирай ресурси руками, щоб виготовити інструменти. Почни з дерева, потім створюй кам’яні та залізні предмети.</p>
+      <p>Після створення світу вибери режим — виживання або креатив. У виживанні збирай ресурси руками, щоб виготовити
+        інструменти. Почни з дерева, потім створюй кам’яні та залізні предмети.</p>
     </section>
 
     <section id="build" class="card">
       <h2>2️⃣ Будівництво</h2>
-      <p>Будівництво — головна частина Minecraft! Використовуй блоки, щоб створювати будинки, ферми або навіть цілі міста. Експериментуй з матеріалами, як-от дерево, камінь, скло.</p>
+      <p>Будівництво — головна частина Minecraft! Використовуй блоки, щоб створювати будинки, ферми або навіть цілі
+        міста. Експериментуй з матеріалами, як-от дерево, камінь, скло.</p>
     </section>
 
     <section id="survive" class="card">
       <h2>3️⃣ Виживання</h2>
-      <p>З настанням ночі з’являються монстри — зомбі, скелети, павуки. Побудуй укриття, зроби меч або лук, і не забувай про їжу. Використовуй піч, щоб приготувати їжу або переплавити руду.</p>
+      <p>З настанням ночі з’являються монстри — зомбі, скелети, павуки. Побудуй укриття, зроби меч або лук, і не забувай
+        про їжу. Використовуй піч, щоб приготувати їжу або переплавити руду.</p>
     </section>
 
     <section id="tips" class="card">
@@ -84,4 +91,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
