--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </li>
   <li><a href="instructions.html">Інструкція</a></li>
   <li><a href="quiz.html">Квіз</a></li>
+  <li><a href="poradu.html">Поради</a></li>
 </ul>
 
     <a href="https://www.minecraft.net/uk-ua/get-minecraft" target="_blank" class="btn nav-btn">Скачати</a>
