--- a/poradu.html
+++ b/poradu.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="nav-container">
+    <nav class="navbar ">
+        <div class="container nav-container">
             <a href="index.html" class="logo">
                 <img src="img/logo.png" alt="Minecraft Logo">
             </a>
